<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/toolbarBottom"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/ibCancel"
            android:layout_width="72dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="14dp"
            android:background="@android:color/transparent"
            android:tint="@color/twitter_blue"
            android:contentDescription="TODO"
            tools:ignore="RtlHardcoded" />

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="TODO" />

        <com.thanh.tweeter.customView.RequiredEditText
            android:id="@+id/etBody"
            android:layout_width="334dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:gravity="top"
            android:layout_marginStart="20dp"
            android:hint="@string/what_s_happening"
            android:inputType="textMultiLine"
            android:textColor="@color/twitter_gray"
            android:layout_below="@+id/ibCancel"
           />
    </RelativeLayout>

    <!--toolbar near keyboard-->
    <RelativeLayout
        android:id="@+id/toolbarBottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/twitter_lightgray"
     >

        <ImageButton
            android:id="@+id/buttonPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:tint="@color/twitter_blue"

            android:contentDescription="@string/media" />

        <ImageButton
            android:id="@+id/buttonGIF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:background="@android:color/transparent"
            android:tint="@color/twitter_blue"
            android:contentDescription="@string/gif"
            android:layout_alignTop="@+id/buttonPhoto"
            android:layout_toEndOf="@+id/buttonPhoto" />

        <ImageButton
            android:id="@+id/buttonLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:tint="@color/twitter_blue"
            android:contentDescription="@string/location"
            android:layout_alignTop="@+id/buttonGIF"
            android:layout_toEndOf="@+id/buttonGIF" />



        <Button
            android:id="@+id/buttonTweet"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/pill_filled"
            android:text="@string/tweet_action"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>
